# JVidNote

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
docs/: gpu-setup.md
scripts/: setup.py
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  audio_extractor.cpp  audio_extractor.h  audio_extractor.hpp  audio_resampler.cpp  audio_resampler.h  log.h  speech_recognizer.cpp  speech_recognizer.h  speech_recognizer.hpp
